pydantic для валидации моделей структур

--- a/schliffs/beme/B3312.yaml
+++ b/schliffs/beme/B3312.yaml
@@ -9,7 +9,7 @@ snow_type:
   - transformed
 snow_temperature:
   - min: -5
-  - max: +5
+    max: +5
 condition: yellow
 manufactory: "all"
 house: "Beme"
