--- a/schliffs/fischer/P10-1.yaml
+++ b/schliffs/fischer/P10-1.yaml
@@ -8,7 +8,7 @@ snow_type:
   - dry
 snow_temperature:
   - min: null
-  - max: 0
+    max: 0
 condition: ""
 manufactory: "Fischer"
 house: "Fischer"
