--- a/schliffs/ramsau/OH3.yaml
+++ b/schliffs/ramsau/OH3.yaml
@@ -8,7 +8,7 @@ snow_type:
   - all
 snow_temperature:
   - min: -7
-  - max: +5
+    max: +5
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
