--- a/schliffs/ramsau/S12-3.yaml
+++ b/schliffs/ramsau/S12-3.yaml
@@ -7,7 +7,7 @@ snow_type:
   - fresh
 snow_temperature:
   - min: -6
-  - max: -2
+    max: -2
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
