--- a/schliffs/uventa/729.yaml
+++ b/schliffs/uventa/729.yaml
@@ -9,7 +9,7 @@ snow_type:
   - universal
 snow_temperature:
   - min: -12
-  - max: 2
+    max: 2
 condition: ""
 manufactory: "Uventa"
 house: "Uventa"
