--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pyyaml (>=6.0.2,<7.0.0)"
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "pydantic (>=2.11.2,<3.0.0)"
 ]
 
 
