--- a/schliffs/ekiptime/SIGMA.yaml
+++ b/schliffs/ekiptime/SIGMA.yaml
@@ -11,7 +11,7 @@ snow_type:
   - transformed
 snow_temperature:
   - min: 0
-  - max: +15
+    max: +15
 condition: yellow
 manufactory: ""
 house: "ekiptime"
