--- a/schliffs/fischer/P5-1.yaml
+++ b/schliffs/fischer/P5-1.yaml
@@ -7,7 +7,7 @@ snow_type:
   - all
 snow_temperature:
   - min: -10
-  - max: 5
+    max: 5
 condition: ""
 manufactory: "Fischer"
 house: "Fischer"
