--- a/schliffs/fischer/P9-2.yaml
+++ b/schliffs/fischer/P9-2.yaml
@@ -7,7 +7,7 @@ snow_type:
   - wet
 snow_temperature:
   - min: 0
-  - max: null
+    max: null
 condition: ""
 manufactory: "Fischer"
 house: "Fischer"
