--- a/schliffs/fischer/С8-1.yaml
+++ b/schliffs/fischer/С8-1.yaml
@@ -7,7 +7,7 @@ snow_type:
   - artificial
 snow_temperature:
   - min: -10
-  - max: 0
+    max: 0
 condition: ""
 manufactory: "Fischer"
 house: "Fischer"
