--- a/schliffs/madshus/M61.yaml
+++ b/schliffs/madshus/M61.yaml
@@ -9,7 +9,7 @@ snow_type:
   - transformed
 snow_temperature:
   - min: -6
-  - max: -1
+    max: -1
 condition: blue
 manufactory: "Madshus"
 house: "Madshus"
