--- a/schliffs/marsport/F1.yaml
+++ b/schliffs/marsport/F1.yaml
@@ -9,7 +9,7 @@ snow_type:
   - dirty
 snow_temperature:
   - min: -5
-  - max: +5
+    max: +5
 condition: yellow
 manufactory: ""
 house: "MarSport"
