--- a/schliffs/marsport/SM15-5.yaml
+++ b/schliffs/marsport/SM15-5.yaml
@@ -8,7 +8,7 @@ snow_type:
   - transformed
 snow_temperature:
   - min: -15
-  - max: -5
+    max: -5
 condition: green
 manufactory: ""
 house: "MarSport"
