--- a/schliffs/ramsau/Pl1.yaml
+++ b/schliffs/ramsau/Pl1.yaml
@@ -10,7 +10,7 @@ snow_type:
 
 snow_temperature:
   - min: null
-  - max: null
+    max: null
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
