--- a/schliffs/ramsau/Pl2.yaml
+++ b/schliffs/ramsau/Pl2.yaml
@@ -10,8 +10,8 @@ snow_type:
   - transformed
 
 snow_temperature:
-  - min: null
-  - max: null
+  - min: -10
+    max: 0
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
