--- a/schliffs/ramsau/S11-1.yaml
+++ b/schliffs/ramsau/S11-1.yaml
@@ -7,7 +7,7 @@ snow_type:
   - dry
 snow_temperature:
   - min: -20
-  - max: -10
+    max: -10
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
