--- a/schliffs/ramsau/S11-3.yaml
+++ b/schliffs/ramsau/S11-3.yaml
@@ -9,7 +9,7 @@ snow_type:
   - artificial
 snow_temperature:
   - min: -20
-  - max: -10
+    max: -10
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
