--- a/schliffs/ramsau/S12-1.yaml
+++ b/schliffs/ramsau/S12-1.yaml
@@ -9,7 +9,7 @@ snow_type:
   - artificial
 snow_temperature:
   - min: -15
-  - max: 0
+    max: 0
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
