--- a/schliffs/ramsau/S12-14.yaml
+++ b/schliffs/ramsau/S12-14.yaml
@@ -8,7 +8,7 @@ snow_type:
   - fresh
 snow_temperature:
   - min: -10
-  - max: -2
+    max: -2
 condition: "период потепления"
 manufactory: "Fischer"
 house: "Ramsau"
