--- a/schliffs/ramsau/S12-2-07.yaml
+++ b/schliffs/ramsau/S12-2-07.yaml
@@ -7,7 +7,7 @@ snow_type:
   - fresh
 snow_temperature:
   - min: -10
-  - max: 0
+    max: 0
 condition: "мягкая лыжня"
 manufactory: "Fischer"
 house: "Ramsau"
