--- a/schliffs/ramsau/S12-4.yaml
+++ b/schliffs/ramsau/S12-4.yaml
@@ -8,7 +8,7 @@ snow_type:
   - dry
 snow_temperature:
   - min: -15
-  - max: -2
+    max: -2
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
