--- a/schliffs/ramsau/S12-7.yaml
+++ b/schliffs/ramsau/S12-7.yaml
@@ -7,7 +7,7 @@ snow_type:
   - artificial
 snow_temperature:
   - min: -12
-  - max: -2
+    max: -2
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
