--- a/schliffs/ramsau/S13-5-08.yaml
+++ b/schliffs/ramsau/S13-5-08.yaml
@@ -9,7 +9,7 @@ snow_type:
   - fresh
 snow_temperature:
   - min: null
-  - max: null
+    max: null
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
