--- a/schliffs/uventa/SL7.yaml
+++ b/schliffs/uventa/SL7.yaml
@@ -8,7 +8,7 @@ snow_type:
   - slightly_transformed
 snow_temperature:
   - min: -10
-  - max: -3
+    max: -3
 condition: ""
 manufactory: "Uventa"
 house: "Uventa"
