--- a/schliffs/uventa/X3LS.yaml
+++ b/schliffs/uventa/X3LS.yaml
@@ -10,7 +10,7 @@ snow_type:
   - dirty
 snow_temperature:
   - min: -2
-  - max: 10
+    max: 10
 condition: ""
 manufactory: "Uventa"
 house: "Uventa"
