fix похожих для X25

--- a/schliffs/skipole/_meta.yaml
+++ b/schliffs/skipole/_meta.yaml
@@ -13,5 +13,6 @@ contact:
     - tel:+79261489013
     - tel:+79032181881
   address: Москва, село Ромашково ул.Советская, д.113
+  address: Москва, село Ромашково ул.Советская, д.113
 
 updated_at: 2024-04-04
