feat: * добавлены структуры Svecky и обновлена модель метаданных * изменено поле phone на phones (массив) во всех meta файлах * добавлено поле city в модель meta * добавлены 8 новых структур для Svecky

--- a/schliffs/marsport/F1.yaml
+++ b/schliffs/marsport/F1.yaml
@@ -14,7 +14,7 @@ condition: yellow
 manufactory: ""
 house: "MarSport"
 author: "Alexandr Veselov "
-country: "Russia"
+country: "Россия"
 
 tags:
   - влажный
