--- a/schliffs/marsport/M100.yaml
+++ b/schliffs/marsport/M100.yaml
@@ -12,7 +12,7 @@ condition: blue
 manufactory: ""
 house: "MarSport"
 author: "Alexandr Veselov "
-country: "Russia"
+country: "Россия"
 
 tags:
   - свежий снег
