--- a/schliffs/marsport/SM15-5.yaml
+++ b/schliffs/marsport/SM15-5.yaml
@@ -13,7 +13,7 @@ condition: green
 manufactory: ""
 house: "MarSport"
 author: "Alexandr Veselov "
-country: "Russia"
+country: "Россия"
 
 tags:
   - свежий снег
