--- a/schliffs/serviccer/SV100.yaml
+++ b/schliffs/serviccer/SV100.yaml
@@ -15,7 +15,7 @@ condition: yellow
 manufactory: ""
 house: "Serviccer"
 author: "Victor Golovin"
-country: "Russia"
+country: "Россия"
 
 tags:
   - глянец
