--- a/schliffs/skipole/W28.yaml
+++ b/schliffs/skipole/W28.yaml
@@ -19,7 +19,7 @@ condition: yellow
 manufactory: ""
 house: "Skipole"
 author: "Fedor Nikolaev"
-country: "Russia"
+country: "Россия"
 
 tags:
   - переходная
