--- a/schliffs/skipole/W30.yaml
+++ b/schliffs/skipole/W30.yaml
@@ -14,7 +14,7 @@ condition:
 manufactory: ""
 house: "Skipole"
 author: "Fedor Nikolaev"
-country: "Russia"
+country: "Россия"
 
 tags:
   - мокрый снег
