--- a/schliffs/skipole/X25.yaml
+++ b/schliffs/skipole/X25.yaml
@@ -13,7 +13,7 @@ condition: yellow
 manufactory: ""
 house: "Skipole"
 author: "Fedor Nikolaev"
-country: "Russia"
+country: "Россия"
 
 tags:
   - свежий снег
