--- a/schliffs/skipole/Х20.yaml
+++ b/schliffs/skipole/Х20.yaml
@@ -15,7 +15,7 @@ condition: blue
 manufactory: ""
 house: "Skipole"
 author: "Fedor Nikolaev"
-country: "Russia"
+country: "Россия"
 
 tags:
   - свежий снег
