--- a/schliffs/skipole/ХО.yaml
+++ b/schliffs/skipole/ХО.yaml
@@ -16,7 +16,7 @@ condition:
 manufactory: ""
 house: "Skipole"
 author: "Fedor Nikolaev"
-country: "Russia"
+country: "Россия"
 
 tags:
   - сухой снег
