--- a/schliffs/uventa/Z1.yaml
+++ b/schliffs/uventa/Z1.yaml
@@ -14,7 +14,7 @@ condition: "жесткая трасса, глянец"
 manufactory: "Uventa"
 house: "Uventa"
 author: ""
-country: "Russia"
+country: "Россия"
 
 tags:
   - глянец
