--- a/schliffs/marsport/_meta.yaml
+++ b/schliffs/marsport/_meta.yaml
@@ -4,12 +4,14 @@ description_ru: Кастомные структуры для беговых лы
 
 website_url: https://marsport.ru/service
 
-country: Russia
+country: Россия
+city: Одинцово
 logo:
 
 contact:
   email:
-  phone: tel:+79250464773
+  phones:
+    - "+79250464773"
   address: г. Одинцово ул. Манжосовская 1
 
 updated_at: 2024-04-04
