--- a/schliffs/uventa/729.yaml
+++ b/schliffs/uventa/729.yaml
@@ -14,7 +14,7 @@ condition: ""
 manufactory: "Uventa"
 house: "Uventa"
 author: ""
-country: "Russia"
+country: "Россия"
 
 tags:
   - универсальная
