--- a/schliffs/skipole/_meta.yaml
+++ b/schliffs/skipole/_meta.yaml
@@ -2,7 +2,7 @@ name: Skipole
 description:
 description_ru: Кастомные структуры от Федора Николаева
 
-website_url: https://skipole.ru/shtainshlift-romashkovo
+website_url: https://shtainshlift.ru
 country: Россия
 city: Москва
 
