--- a/schliffs/skipole/W28.yaml
+++ b/schliffs/skipole/W28.yaml
@@ -28,7 +28,7 @@ similars:
   - F1
 
 features:
-  -
+  - Может ехать лучше ожидаемого, если снег уже сильно трансформирован.
 
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
