--- a/schliffs/skipole/Х20.yaml
+++ b/schliffs/skipole/Х20.yaml
@@ -27,7 +27,7 @@ similars:
   -
 
 features:
-  -
+  - При потеплении едет хуже, чем на свежем или падающем снегу. В регионах с низкой влажностью — почти не применяется в начале сезона. Во второй половине — сдвиг на +5–7°C.
 
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
