использование датакласса pydantic вместо dict

--- a/schliffs/skipole/_meta.yaml
+++ b/schliffs/skipole/_meta.yaml
@@ -14,6 +14,6 @@ contact:
     - "+79261489013"
     - "+79032181881"
   telegram: Nikfedval
-  address: Москва, село Ромашково ул.Советская, д.113
+  address: Москва, село Ромашково, ул.Советская, д.113
 
 updated_at: 2024-04-04
